apps/skein_compiler/test/skein/conformance/negative/fn_return_unknown_boundary.skein
-- expect: E0010, E0037
-- #291 (B2): :unknown is an internal inference state, never a public top type.
-- A bare call to an unresolved name has no inferred type (B4/#293 turns the
-- unresolved call itself into a structured error); returning it where the fn
-- declares Int previously compiled and loaded. The boundary must reject what
-- inference could not verify. (The original `&fn` form of this fixture became
-- a concrete E0020 mismatch once B3/#292 gave fn references a callable type.)
module FnReturnUnknownBoundary {
  fn get_base() -> Int {
    mystery()!
  }
}
